--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,6 @@
 [tox]
 envlist=
-    py{35,36,py3}-core
+    py36-core
     lint
     doctest
 
@@ -9,7 +9,7 @@ combine_as_imports=True
 force_sort_within_sections=True
 include_trailing_comma=True
 known_third_party=hypothesis,pytest
-known_first_party=<MODULE_NAME>
+known_first_party=deposit_contract
 line_length=21
 multi_line_output=3
 use_parentheses=True
@@ -22,13 +22,10 @@ ignore=
 [testenv]
 usedevelop=True
 commands=
-    core: pytest {posargs:tests/core}
     doctest: make -C {toxinidir}/docs doctest
 basepython =
     doctest: python
-    py35: python3.5
     py36: python3.6
-    pypy3: pypy3
 extras=
     test
     doctest: doc
@@ -38,5 +35,5 @@ whitelist_externals=make
 basepython=python
 extras=lint
 commands=
-    flake8 {toxinidir}/<MODULE_NAME> {toxinidir}/tests
-    isort --recursive --check-only --diff {toxinidir}/<MODULE_NAME> {toxinidir}/tests
+    flake8 {toxinidir}/deposit_contract {toxinidir}/tests
+    isort --recursive --check-only --diff {toxinidir}/deposit_contract {toxinidir}/tests
