--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,7 @@
 [tox]
 envlist=
     py36-core
+    py36-contract
     lint
     doctest
 
@@ -22,6 +23,8 @@ ignore=
 [testenv]
 usedevelop=True
 commands=
+    contract: pytest {posargs:tests/contracts}
+    core : pytest {posargs:tests/core}
     doctest: make -C {toxinidir}/docs doctest
 basepython =
     doctest: python
