--- a/tox.ini
+++ b/tox.ini
@@ -17,7 +17,7 @@ use_parentheses=True
 
 [flake8]
 max-line-length= 100
-exclude= venv*,.tox,docs,build
+exclude= venv*,.tox,docs,build,*.v.py
 ignore=
 
 [testenv]
